<resources>
    <string name="app_name">decorMiCasa</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem
    </string>

    <string name="login_hint_username">Usuario</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="button_next">INGRESAR</string>
    <string name="buttonRegistro">Registrate</string>
    <string name="dominioservidor">https://damGrupo3.pythonanywhere.com/</string>
    <string name="error_password">Password must be at least 6 characters long</string>
    <string name="invalid_username">El nombre de usuario no existe</string>
    <string name="invalid_password">La contraseña no es correcta</string>
    <string name="welcome">Welcome</string>
    <string name="login_failed">Login failed</string>
    <string name="buscar">Buscar</string>
    <string name="usuario_button_description"> Boton usuario</string>
    <string name="regresar_button_description"> Botón regresar</string>
    <string name="carrito_button_description"> Botón carrito</string>
    <string name="gestionar_categorias">gestionar categorias</string>
    <string name="inf_categoria">Información de la categoría</string>
    <string name="cod">Código</string>
    <string name="nombre">Nombre</string>
    <string name="desc">Descripción</string>
    <string name="estado">Estado</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="sel_img">Seleccionar imagen</string>
    <string name="precio">Precio</string>
    <string name="lista_productos_fragment_label">Lista de productos</string>
    <string name="politica">"POLÍTICAS DE PRIVACIDAD"</string>
    <string name="nosotros">"NOSOTROS"</string>
    <string name="ubicacion">"ENCUÉNTRANOS AQUÍ"</string>
    <string name="p_seguridad">"Nos tomamos muy en serio la protección de tu información. Aplicamos medidas técnicas y organizativas para garantizar que tus datos se mantengan seguros y confidenciales. Esto incluye el acceso limitado únicamente al personal autorizado."</string>

    <string name="inicio">"BIENVENIDO A DECOR MI CASA"</string>
    <string name="categorias">"CATEGORÍAS"</string>
    <string name="productos">"PRODUCTOS"</string>
    <string name="empleados">"EMPLEADOS"</string>
    <string name="compras">"COMPRAS"</string>
    <string name="marcas">"MARCAS"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="estado_producto">
        <item>Activo</item>
        <item>Inactivo</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>