<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminActivity">

    <!-- Barra superior -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryBlue"
        android:elevation="4dp"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="34dp"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logoApp"
                android:layout_width="38dp"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/decor_logo" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingHorizontal="16dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/baseline_search_24" />

                    <EditText
                        android:id="@+id/searchBar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/buscar"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/btnUsuario"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/usuario_button_description"
                android:src="@drawable/baseline_person_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/inicio"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <GridLayout
        android:id="@+id/gridOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="16dp"
        android:rowCount="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCategorias"
            android:layout_width="119dp"
            android:layout_height="261dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/categorias"
            android:backgroundTint="@color/colorCategorias"
            android:textColor="@color/black"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnProductos"
            android:layout_width="119dp"
            android:layout_height="261dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/productos"
            android:backgroundTint="@color/colorProductos"
            android:textColor="@color/black"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMarcas"
            android:layout_width="119dp"
            android:layout_height="261dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/marcas"
            android:backgroundTint="@color/colorMarcas"
            android:textColor="@color/black"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEmpleados"
            android:layout_width="119dp"
            android:layout_height="261dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/empleados"
            android:backgroundTint="@color/colorEmpleados"
            android:textColor="@color/black"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
    </GridLayout>
</LinearLayout>
