<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryBlue"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingTop="34dp"
            android:paddingBottom="16dp"
            android:paddingHorizontal="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/logoApp"
                    android:layout_width="38dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/decor_logo" />

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="16dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/baseline_search_24" />

                        <EditText
                            android:id="@+id/searchBar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="@string/buscar"
                            android:textSize="16sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <ImageButton
                    android:id="@+id/btnCarrito"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/carrito_button_description"
                    android:src="@drawable/baseline_shopping_cart_24" />

                <ImageButton
                    android:id="@+id/btnUsuario"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/usuario_button_description"
                    android:src="@drawable/baseline_person_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="343dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ubicacion"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/topBar"
            android:layout_above="@id/bottomNavigation" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/primaryBlue">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <ImageButton
                    android:id="@+id/btnHome"
                    android:layout_width="77dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="12dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/baseline_home_24" />

                <ImageButton
                    android:id="@+id/btnFav"
                    android:layout_width="78dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="12dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/baseline_favorite_24" />

                <ImageButton
                    android:id="@+id/btnShop"
                    android:layout_width="63dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="12dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/baseline_shopping_bag_24" />

                <ImageButton
                    android:id="@+id/btnMenu"
                    android:layout_width="79dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="12dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/baseline_menu_24" />
            </LinearLayout>
        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        android:fitsSystemWindows="true" />
</androidx.drawerlayout.widget.DrawerLayout>