<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriasActivity">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/topBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryBlue"
            android:elevation="4dp"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingTop="34dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <ImageView
                    android:id="@+id/logoApp"
                    android:layout_width="38dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/decor_logo" />

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:paddingHorizontal="16dp">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/baseline_search_24"/>

                        <EditText
                            android:id="@+id/searchBar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:hint="@string/buscar"
                            android:textSize="16sp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <ImageButton
                    android:id="@+id/btnCarrito"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/baseline_shopping_cart_24"
                    android:contentDescription="@string/carrito_button_description"/>

                <ImageButton
                    android:id="@+id/btnUsuario"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/baseline_person_24"
                    android:contentDescription="@string/usuario_button_description"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="343dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/categorias"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topBar"
            android:padding="16dp">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:padding="16dp"
                android:orientation="horizontal"
                android:rowCount="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onCategoryClick">

                    <ImageView
                        android:id="@+id/categoria1_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/relojes_pared"
                        android:contentDescription="Imagen categoría 1" />

                    <TextView
                        android:id="@+id/categoria1_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Categoría 1"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:layout_rowWeight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onCategoryClick">

                    <ImageView
                        android:id="@+id/categoria2_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/relojes_pared"
                        android:contentDescription="Imagen categoría 2" />

                    <TextView
                        android:id="@+id/categoria2_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Categoría 2"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:gravity="center"/>
                </LinearLayout>

            </GridLayout>

        </ScrollView>

    </RelativeLayout>

    <!-- barra lateral -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        android:fitsSystemWindows="true"/>

</androidx.drawerlayout.widget.DrawerLayout>
